--- a/index.html
+++ b/index.html
@@ -30,10 +30,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto my-2 my-lg-0">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#services">Services</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#portfolio">Portfolio</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#contact">Contact</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="about.html">About</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="join.html">Join</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="signIn.html">Sign In</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="jobVacancy.html">Jobs</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="contactUs.html">Contact Us</a></li>
                 </ul>
             </div>
         </div>
@@ -70,19 +71,25 @@
                     <p>Our Services</p>
                 </div>
                 <div class="col-sm item">
-                    <div>1</div>
-                    <div>1.2</div>
-                    <div>1.3</div>
+                    <div>
+                        <img src="./assets/images/Home/ic_nearshore_developers.svg" alt="" srcset="">
+                    </div>
+                    <div class="boldText itemTitle">Nearshore Developers</div>
+                    <div>Remote developers that feel like local team members.</div>
                 </div>
                 <div class="col-sm item">
-                    <div>2.1</div>
-                    <div>2</div>
-                    <div>2.3</div>
+                    <div>
+                        <img src="./assets/images/Home/ic_software_solutions.svg" alt="" srcset="">
+                    </div>
+                    <div class="boldText itemTitle">Software Solutions</div>
+                    <div>Reliable softwarte development that management can trust.</div>
                 </div>
                 <div class="col-sm item">
-                    <div>3.1</div>
-                    <div>3.2</div>
-                    <div>3</div>
+                    <div>
+                        <img src="./assets/images/Home/ic_office_setup.svg" alt="" srcset="">
+                    </div>
+                    <div class="boldText itemTitle">Office Setup</div>
+                    <div>Removing barriers to build better development teams.</div>
                 </div>
             </div>
         </div>
@@ -98,20 +105,20 @@
             <div class="row">random text</div>
             <div class="row">WHY WORK WITH US?</div>
             <div class="row">
-                <div class="col-sm">
-                    <div class="row"></div>
-                    <div class="row"></div>
-                    <div class="row"></div>
+                <div class="col-sm item">
+                    <div><img src="./assets/images/Home/vc_time_zone.svg" alt="" srcset=""></div>
+                    <div>Time zone</div>
+                    <div>Escape the 24 hours response cycle with developers on your same timezone</div>
                 </div>
-                <div class="col-sm">
-                    <div class="row"></div>
-                    <div class="row"></div>
-                    <div class="row"></div>
+                <div class="col-sm  item">
+                    <div><img src="./assets/images/Home/vc_cost.svg" alt="" srcset=""></div>
+                    <div>Cost</div>
+                    <div></div>
                 </div>
-                <div class="col-sm">
-                    <div class="row"></div>
-                    <div class="row"></div>
-                    <div class="row"></div>
+                <div class="col-sm  item">
+                    <div><img src="./assets/images/Home/vc_engagement.svg" alt="" srcset=""></div>
+                    <div>Engagement</div>
+                    <div></div>
                 </div>
             </div>
             <div class="row"></div>
@@ -154,7 +161,7 @@
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div>
+                    <div class="row">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
                         <div class="col-3">twitter</div>
