--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
                     <div>
                         <img src="./assets/images/Home/ic_nearshore_developers.svg" alt="" srcset="">
                     </div>
-                    <div class="boldText itemTitle">Nearshore Developers</div>
+                    <div class="itemTitle">Nearshore Developers</div>
                     <div>Remote developers that feel like local team members.</div>
                 </div>
                 <div class="col-sm item">
                     <div>
                         <img src="./assets/images/Home/ic_software_solutions.svg" alt="" srcset="">
                     </div>
-                    <div class="boldText itemTitle">Software Solutions</div>
+                    <div class="itemTitle">Software Solutions</div>
                     <div>Reliable softwarte development that management can trust.</div>
                 </div>
                 <div class="col-sm item">
                     <div>
                         <img src="./assets/images/Home/ic_office_setup.svg" alt="" srcset="">
                     </div>
-                    <div class="boldText itemTitle">Office Setup</div>
+                    <div class="itemTitle">Office Setup</div>
                     <div>Removing barriers to build better development teams.</div>
                 </div>
             </div>
@@ -97,31 +97,41 @@
 
     <div class="container floatingBtn">
         <div class="row">imagen</div>
-        <div class="row">texto</div>
     </div>
     <!-- why work with us -->
     <div id="why">
         <div class="container">
-            <div class="row">random text</div>
-            <div class="row">WHY WORK WITH US?</div>
+            <div class="row text">
+                <p>texto</p>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <h1>WHY US<span class="orange">?</span></h1>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-sm item">
                     <div><img src="./assets/images/Home/vc_time_zone.svg" alt="" srcset=""></div>
-                    <div>Time zone</div>
+                    <div class="itemTitle orange">Time zone</div>
                     <div>Escape the 24 hours response cycle with developers on your same timezone</div>
                 </div>
                 <div class="col-sm  item">
                     <div><img src="./assets/images/Home/vc_cost.svg" alt="" srcset=""></div>
-                    <div>Cost</div>
-                    <div></div>
+                    <div class="itemTitle orange">Cost</div>
+                    <div>Stretch your budget without compromising quality.</div>
                 </div>
                 <div class="col-sm  item">
                     <div><img src="./assets/images/Home/vc_engagement.svg" alt="" srcset=""></div>
-                    <div>Engagement</div>
-                    <div></div>
+                    <div class="itemTitle orange">Engagement</div>
+                    <div>Engaged developers provide creative solutions for your project.</div>
                 </div>
             </div>
-            <div class="row"></div>
+            <div class="row">
+                <div class="col-sm" align="center">
+                    <a class="learnButton" href="https://www.w3schools.com">Learn more about it. <span
+                            style="margin-left: 10px;">&rarr;</span></a>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Technologies we love -->
