background of images in why done

--- a/index.html
+++ b/index.html
@@ -133,6 +133,14 @@
                 </div>
             </div>
         </div>
+        <div class="nearShoreImages">
+            <div class="row">
+                <div class="col-sm">
+                    <img src="./assets/images/Home/" alt="" srcset="">
+                </div>
+                <div class="col-sm"></div>
+            </div>
+        </div>
     </div>
     <!-- Technologies we love -->
     <div id="tech"></div>
