adding images to nearshore

--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div class="nearShoreImages">
             <div class="row">
                 <div class="col-sm">
-                    <img src="./assets/images/Home/" alt="" srcset="">
+                    <img src="./assets/images/Home/vc_nearshore_communication.svg" alt="" srcset="">
                 </div>
                 <div class="col-sm"></div>
             </div>
