some minor advances but i need to save, its almost 4am and better safe than sorry

--- a/index.html
+++ b/index.html
@@ -128,8 +128,10 @@
             </div>
             <div class="row">
                 <div class="col-sm" align="center">
-                    <a class="learnButton" href="https://www.w3schools.com">Learn more about it. <span
-                            style="margin-left: 10px;">&rarr;</span></a>
+                    <a class="learnButton" href="https://www.w3schools.com">Learn more about it.
+                        <img src="./assets/images/Home/ic_arrow_right_white_58px.svg" alt="" style="width: 20px;"
+                            srcset="">
+                    </a>
                 </div>
             </div>
         </div>
@@ -138,7 +140,20 @@
                 <div class="col-sm">
                     <img src="./assets/images/Home/vc_nearshore_communication.svg" alt="" srcset="">
                 </div>
-                <div class="col-sm"></div>
+                <div class="col-sm">
+                    <div class="row">
+                        <h1>Communication matters.</h1>
+                        <p>
+                            Hire a developer in your same timezone.
+                        </p>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm" align="center">
+                            <a href="http://#">Let us help <img src="./assets/images/Home/ic_arrow_right_green_58px.svg"
+                                    alt="" srcset=""></a>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
