--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm boldText">
-                    <h1>WE ARE LULOSOFT<span class="green">.</span></h1>
+                    <p class="boldText title black centered">WE ARE LULOSOFT<span class="green">.</span></p>
                 </div>
                 <div class="col-sm">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, ad enim quos libero eos et
@@ -96,17 +96,17 @@
     </div>
 
     <div class="container floatingBtn">
-        <div class="row">imagen</div>
+        <!-- <div class="row">imagen</div> -->
     </div>
     <!-- why work with us -->
     <div id="why">
         <div class="container">
             <div class="row text">
-                <p>texto</p>
+                <!-- <p>texto</p> -->
             </div>
             <div class="row">
                 <div class="col-sm">
-                    <h1>WHY US<span class="orange">?</span></h1>
+                    <p class="boldText title black centered">WHY US<span class="orange">?</span></p>
                 </div>
             </div>
             <div class="row">
@@ -136,57 +136,150 @@
             </div>
         </div>
         <div class="nearShoreImages">
-            <div class="row">
-                <div class="col-sm">
-                    <img src="./assets/images/Home/vc_nearshore_communication.svg" alt="" srcset="">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm">
+                        <img src="./assets/images/Home/vc_nearshore_communication.svg" alt="" srcset="">
+                    </div>
+                    <div class="col-sm">
+                        <div class="row">
+                            <p class="boldText title">Communication matters.</p>
+                            <p>
+                                Hire a developer in your same timezone.
+                            </p>
+                        </div>
+                        <div class="row">
+                            <div class="col-sm" align="center">
+                                <a href="http://#">Let us help <img
+                                        src="./assets/images/Home/ic_arrow_right_green_58px.svg" alt="" srcset=""></a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm">
-                    <div class="row">
-                        <h1>Communication matters.</h1>
-                        <p>
-                            Hire a developer in your same timezone.
+            </div>
+        </div>
+        <div class="softwareSolutions">
+            <div class="container">
+                <!-- <div class="row">texto</div> -->
+                <div class="row centered">
+                    <p class="title black">We really love our job, and we specialize in<span class="orange">:</span></p>
+                </div>
+                <div class="row">
+                    <div class="col-sm">
+                        <div class="row">
+                            <img src="./assets/images/Home/vc_qa.svg" alt="" srcset=""
+                                style="width: 100px; margin: auto;">
+                        </div>
+                        <p class="boldText centered">Quality Assurance</p>
+                        <p class="centered">Internet of things with cutting edge technologies like Bluetooth/BLE,
+                            Beacons, MQTT and Zigbee, among others.</p>
+                    </div>
+                    <div class="col-sm">
+                        <div class="row">
+                            <img src="./assets/images/Home/vc_front_back_end.svg" alt="" srcset=""
+                                style="width: 100px; margin: auto;">
+                        </div>
+                        <p class="boldText centered">Front / Back End</p>
+                        <p class="centered">Cloud based web development and desktop aplications taken to a new level.
+                            Databases, content management and rich media with style.
                         </p>
                     </div>
-                    <div class="row">
-                        <div class="col-sm" align="center">
-                            <a href="http://#">Let us help <img src="./assets/images/Home/ic_arrow_right_green_58px.svg"
-                                    alt="" srcset=""></a>
+                    <div class="col-sm">
+                        <div class="row">
+                            <img src="./assets//images/Home/vc_mobile.svg" alt="" srcset=""
+                                style="width: 100px; margin: auto;">
                         </div>
+                        <p class="boldText centered">Mobile</p>
+                        <p class="centered">Take your ideas to the mobile and wearable areas with apps featuring optimal
+                            design for both visual and performance greatness.</p>
+                    </div>
+                    <div class="col-sm">
+                        <div class="row">
+                            <img src="./assets/images/Home/vc_embedded.svg" alt="" srcset=""
+                                style="width: 100px; margin: auto;">
+                        </div>
+                        <p class="boldText centered">Embedded</p>
+                        <p class="centered">Robotics, Control Systems, automation and digital signal processing with
+                            robust solutions that meet today's challenges.</p>
                     </div>
                 </div>
             </div>
         </div>
     </div>
     <!-- Technologies we love -->
-    <div id="tech"></div>
+    <div id="tech">
+        <div class="container">
+            <!-- <div class="row">texto</div> -->
+            <div class="row centered">
+                <p class="title black">Technologies we love <span class="green">.</span></p>
+            </div>
+            <div class="row">
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_aws.svg" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_java.png" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_azure.svg" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_microsoft_net.png" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_mysql.svg" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_js.png" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_google_cloud.svg" alt="" srcset=""></div>
+                <div class="col-sm centered">
+                    <img class="logo" src="./assets/images/Home/logo_php.svg" alt="" srcset=""></div>
+            </div>
+        </div>
+    </div>
     <!-- Clients who trust us -->
-    <div id="clients"></div>
+    <div id="clients">
+        <div class="container">
+            <!-- <div class="row">texto</div> -->
+            <div class="row centered">
+                <p class="title black">Clients who trust us <span class="orange">.</span></p>
+            </div>
+            <div class="row">
+                <div class="col-sm centered"><img src="./assets/images/Home/logo_ez_chow.png" alt="" srcset=""
+                        class="logo"></div>
+                <div class="col-sm centered"><img src="./assets/images/Home/logo_codigo.svg" alt="" srcset=""
+                        class="logo"></div>
+                <div class="col-sm centered"><img src="./assets/images/Home/logo_spectrio.png" alt="" srcset=""
+                        class="logo"></div>
+                <div class="col-sm centered"><img src="./assets/images/Home/logo_wb_engineering.png" alt="" srcset=""
+                        class="logo"></div>
+            </div>
+        </div>
+    </div>
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row boldText white">Do you think we are the partner you need?</div>
-            <div class="row orange boldText">Dont be shy!</div>
+            <div class="row boldText white centered">
+                Do you think we are the partner you need?
+            </div>
+            <div class="row orange boldText centered">Dont be shy!</div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
                         <div class="col-sm">
-                            <div class="row boldText white">CALI</div>
-                            <div class="row">Alexander Perea</div>
-                            <div class="row">
+                            <div class="row boldText white centered">CALI</div>
+                            <div class="row centered">Alexander Perea</div>
+                            <div class="row centered">
                                 <span class="boldText white">(+57)</span>3183248120
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">ATLANTA</div>
-                            <div class="row">Laura Perea</div>
-                            <div class="row">
+                            <div class="row boldText white centered">ATLANTA</div>
+                            <div class="row centered">Laura Perea</div>
+                            <div class="row centered">
                                 <span class="boldText white">(786)</span>3553310
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">LOUISVILLE</div>
-                            <div class="row">Juan Espinosa</div>
-                            <div class="row">
+                            <div class="row centered boldText white">LOUISVILLE</div>
+                            <div class="row centered">Juan Espinosa</div>
+                            <div class="row centered">
                                 <span class="boldText white">(956)</span>2541148
                             </div>
                         </div>
@@ -194,11 +287,11 @@
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div class="row">
+                    <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3">twitter</div>
-                        <div class="col-3">linkedin</div>
+                        <div class="col-3 centered">twitter</div>
+                        <div class="col-3 centered">linkedin</div>
                     </div>
                 </div>
             </div>
