changed photo size and fix

--- a/index.html
+++ b/index.html
@@ -256,9 +256,11 @@
     <footer>
         <div class="container">
             <div class="row boldText white centered">
-                Do you think we are the partner you need?
+                <p>Do you think we are the partner you need?</p>
             </div>
-            <div class="row orange boldText centered">Dont be shy!</div>
+            <div class="row orange boldText centered">
+                <p>Dont be shy!</p>
+            </div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
@@ -290,8 +292,17 @@
                     <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3 centered">twitter</div>
-                        <div class="col-3 centered">linkedin</div>
+                        <div class="col-3 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-3 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
