--- a/about.html
+++ b/about.html
@@ -40,33 +40,93 @@
         </div>
     </nav>
 
+    <!-- Masthead-->
+    <div class="masterOverlay">
+    </div>
+    <header class="masthead">
+        <div class="container h-100">
+            <div class="row">
+                <div class="title col-sm">
+                    <p>about</p>
+                    <p>us<span class="orange">.</span></p>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <!-- section -->
+    <!-- we are lulosoft -->
+    <div id="lulosoft">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <p class="centered">ABOUT LULOSOFT</p>
+                </div>
+                <div class="col-sm">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, ad enim quos libero eos et
+                        quibusdam doloremque quidem. Iusto, enim? Animi rem amet facere atque ad, quos quae fugit
+                        itaque.</p>
+                </div>
+            </div>
+            <div class="row items">
+                <div class="backgroundText">
+                    <p>Our Services</p>
+                </div>
+                <div class="col-sm item">
+                    <div>
+                        <img src="./assets/images/Home/ic_nearshore_developers.svg" alt="" srcset="">
+                    </div>
+                    <div class="itemTitle">Nearshore Developers</div>
+                    <div>Remote developers that feel like local team members.</div>
+                </div>
+                <div class="col-sm item">
+                    <div>
+                        <img src="./assets/images/Home/ic_software_solutions.svg" alt="" srcset="">
+                    </div>
+                    <div class="itemTitle">Software Solutions</div>
+                    <div>Reliable softwarte development that management can trust.</div>
+                </div>
+                <div class="col-sm item">
+                    <div>
+                        <img src="./assets/images/Home/ic_office_setup.svg" alt="" srcset="">
+                    </div>
+                    <div class="itemTitle">Office Setup</div>
+                    <div>Removing barriers to build better development teams.</div>
+                </div>
+            </div>
+        </div>
+    </div>
 
     <!-- footer -->
     <footer>
         <div class="container">
-            <div class="row boldText white">Do you think we are the partner you need?</div>
-            <div class="row orange boldText">Dont be shy!</div>
+            <div class="row boldText white centered">
+                <p>Do you think we are the partner you need?</p>
+            </div>
+            <div class="row orange boldText centered">
+                <p>Dont be shy!</p>
+            </div>
             <div class="row">
                 <div class="col-sm">
                     <div class="row">
                         <div class="col-sm">
-                            <div class="row boldText white">CALI</div>
-                            <div class="row">Alexander Perea</div>
-                            <div class="row">
+                            <div class="row boldText white centered">CALI</div>
+                            <div class="row centered">Alexander Perea</div>
+                            <div class="row centered">
                                 <span class="boldText white">(+57)</span>3183248120
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">ATLANTA</div>
-                            <div class="row">Laura Perea</div>
-                            <div class="row">
+                            <div class="row boldText white centered">ATLANTA</div>
+                            <div class="row centered">Laura Perea</div>
+                            <div class="row centered">
                                 <span class="boldText white">(786)</span>3553310
                             </div>
                         </div>
                         <div class="col-sm">
-                            <div class="row boldText white">LOUISVILLE</div>
-                            <div class="row">Juan Espinosa</div>
-                            <div class="row">
+                            <div class="row centered boldText white">LOUISVILLE</div>
+                            <div class="row centered">Juan Espinosa</div>
+                            <div class="row centered">
                                 <span class="boldText white">(956)</span>2541148
                             </div>
                         </div>
@@ -74,16 +134,34 @@
                 </div>
                 <div class="col-sm">
                     <img src="" alt="" srcset="">
-                    <div class="row">
+                    <div class="row centered">
                         <div class="col-sm-3 boldText white">Terms and conditions</div>
                         <div class="col-sm-3 boldText white">Privacy policy</div>
-                        <div class="col-3">twitter</div>
-                        <div class="col-3">linkedin</div>
+                        <div class="col-3 centered">
+                            <a href="https://twitter.com/lulo_soft">
+                                <img border="0" alt="Twitter" src="./assets/images/Home/logo_twitter.svg" width="25"
+                                    height="25">
+                            </a>
+                        </div>
+                        <div class="col-3 centered">
+                            <a href="https://www.linkedin.com/company/lulosoft-llc/">
+                                <img src="./assets/images/Home/logo_linkedin.svg" width="25" height="25">
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </footer>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-164069556-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-164069556-1');
+    </script>
 
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
         integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
