--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous"></script>
     <script src="./assets/js/index.js"></script>
 
-    <link rel="stylesheet" href="./assets/css/index.css">
+    <link rel="stylesheet" href="./assets/css/about.css">
     <title>LuloSoft</title>
 </head>
 
@@ -54,7 +54,6 @@
         </div>
     </header>
 
-    <!-- section -->
     <!-- we are lulosoft -->
     <div id="lulosoft">
         <div class="container">
@@ -92,6 +91,81 @@
                     </div>
                     <div class="itemTitle">Office Setup</div>
                     <div>Removing barriers to build better development teams.</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="infographic">
+        <div class="container"></div>
+    </div>
+    <div id="nearshore">
+        <div class="container">
+            <!-- <div class="row" style="margin: auto">
+                <div class="line"></div>
+                nearshore process
+            </div> -->
+            <div class="row centered" style="margin: auto">
+                <p class="boldText title black">Nearshore in Colombia<span class="orange">.</span></p>
+            </div>
+            <div class="row text" style="margin: auto;">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque eligendi cupiditate quod
+                    non voluptatem. Ullam soluta, quisquam, dolores quaerat maiores modi nostrum libero impedit unde
+                    itaque laudantium. Optio, soluta ipsam!</p>
+            </div>
+            <div class="row" style="margin: 6vh auto 0 auto;">
+                <img src="./assets/images/About/vc_nearshore_colombia.svg" alt="" srcset="">
+            </div>
+        </div>
+    </div>
+    <div id="hiringProcess">
+        <div class="container">
+            <!-- <div class="row" style="margin: auto">
+                <div class="line"></div>
+                nearshore process
+            </div> -->
+            <div class="row centered" style="margin: auto">
+                <p class="boldText title black">The key to success<span class="green">.</span></p>
+            </div>
+            <div class="row text" style="margin: auto;">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque eligendi cupiditate quod
+                    non voluptatem. Ullam soluta, quisquam, dolores quaerat maiores modi nostrum libero impedit unde
+                    itaque laudantium. Optio, soluta ipsam!</p>
+            </div>
+            <div class="row" style="margin: auto;">
+                <div class="col-sm">
+                    <p class="boldText black"><span class="green">01.</span> Title Step / Phase 1</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
+                        quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
+                        voluptatibus quo, vitae id dolores repellendus blanditiis.
+                    </p>
+                </div>
+                <div class="col-sm">
+                    <p class="boldText black"><span class="green">02.</span> Title Step / Phase 2</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
+                        quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
+                        voluptatibus quo, vitae id dolores repellendus blanditiis.
+                    </p>
+                </div>
+            </div>
+            <div class="row" style="margin: auto;">
+                <div class="col-sm">
+                    <p class="boldText black"><span class="green">03.</span> Title Step / Phase 3</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
+                        quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
+                        voluptatibus quo, vitae id dolores repellendus blanditiis.
+                    </p>
+                </div>
+                <div class="col-sm">
+                    <p class="boldText black"><span class="green">04.</span> Title Step / Phase 4</p>
+                    <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
+                        quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
+                        voluptatibus quo, vitae id dolores repellendus blanditiis.
+                    </p>
                 </div>
             </div>
         </div>
