--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <p class="centered">ABOUT LULOSOFT</p>
+                    <p class="centered underline">ABOUT LULOSOFT</p>
                 </div>
                 <div class="col-sm">
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat, ad enim quos libero eos et
@@ -134,7 +134,8 @@
             </div>
             <div class="row" style="margin: auto;">
                 <div class="col-sm">
-                    <p class="boldText black"><span class="green">01.</span> Title Step / Phase 1</p>
+                    <p class="boldText black"><span class="green" style="font-size: 2rem;">01.</span> Title Step /
+                        Phase 1</p>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
                         quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
@@ -142,7 +143,8 @@
                     </p>
                 </div>
                 <div class="col-sm">
-                    <p class="boldText black"><span class="green">02.</span> Title Step / Phase 2</p>
+                    <p class="boldText black"><span class="green" style="font-size: 2rem;">02.</span> Title Step / Phase
+                        2</p>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
                         quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
@@ -152,7 +154,8 @@
             </div>
             <div class="row" style="margin: auto;">
                 <div class="col-sm">
-                    <p class="boldText black"><span class="green">03.</span> Title Step / Phase 3</p>
+                    <p class="boldText black"><span class="green" style="font-size: 2rem;">03.</span> Title Step / Phase
+                        3</p>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
                         quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
@@ -160,7 +163,8 @@
                     </p>
                 </div>
                 <div class="col-sm">
-                    <p class="boldText black"><span class="green">04.</span> Title Step / Phase 4</p>
+                    <p class="boldText black"><span class="green" style="font-size: 2rem;">04.</span> Title Step / Phase
+                        4</p>
                     <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Earum sapiente molestiae ducimus
                         quibusdam corporis deserunt qui quam libero reiciendis pariatur vero cumque inventore
